--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/lajawanti/only-user-auth-server#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "knex": "^0.20.7",
-    "morgan": "^1.9.1"
+    "knex": "^0.20.8",
+    "morgan": "^1.9.1",
+    "pg": "^7.17.1",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
